# duPE

./: CMakeLists.txt  README.md
include/: definitions.h
include/dupe/: body.h  fgen.h  math.h  particle.h  pcontacts.h  pfgen.h  plinks.h  pworld.h  world.h
src/: body.cpp  fgen.cpp  main.cpp  particle.cpp  pcontacts.cpp  pfgen.cpp  plinks.cpp  pworld.cpp  world.cpp
